Test for SonarCloud analyse. Updated build and sonar yml last line to see if now with new line Token found

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,4 +28,4 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Build and analyze
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=SE2-Codenames_CodenamesServer
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=SE2-Codenames_CodenamesServer -Dsonar.login=${{ secrets.SONAR_TOKEN }}
