--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <sonar.coverage.jacoco.xmlReportPaths>
             ${project.build.directory}/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
         </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.coverage.exclusions>**/Server/ServerImpl.java</sonar.coverage.exclusions>
     </properties>
 
 </project>
